--- a/Project/index.html
+++ b/Project/index.html
@@ -77,38 +77,47 @@
             <div class="top-content">
               <div class="name-area">
                 <!-- Create a Headline 2 element and have it display your name -->
-
+                <h2> Dinah McFadden</h2>
                 <p>Full Stack Web Development</p>
 
                 <!-- Create a paragraph element and give it your location -->
-
+                <p>Elgin, Illinois</p>
                 <!-- Create another paragraph element. This time, give it the class of "remote". The text should indicate if you are open to remote opportunities-->
+                <div class="remote">
+                  <p>Open to remote opportunities!</p>
+                </div>
               </div>
               <div class="photo-area">
                 <!-- Create an Image element. After you have saved your image to the assets folder, give your image filename as the src to this Image element-->
-
+                <img src="assets/LambdaLogo.png" alt="lambda logo"/>
                 <button>Get in Touch</button>
               </div>
             </div>
             <div class="middle-content">
               <h3>Skills</h3>
               <ul class="pill-section">
+                <li class="pill">Optimistic</li>
+                <li class="pill">Never gonna give up!</li>
+                <li class="pill">Writer</li>
+                <li class="pill">Amazing</li>
+                <li class="pill">Forever Learning</li>
                 <!-- Referencing the code above, create List Item elements with skills you currently have (does NOT need to be software related!). Try to create at least 5.-->
               </ul>
 
               <!-- If you have previous education, create a Headline 4 element and include your area of study -->
-
               <h4>
                 Background:
-                <!-- Replace this with your background! -->
+                Registered Behavior Tech.
               </h4>
             </div>
             <div class="bottom-content">
               <!-- Use this area to write a simple Bio about yourself. Give a little of your background and what you hope to accomplish after Lambda-->
+              <p>I am curently 22 years old and enjoying myself so far in Lambdas program! I am hoping to acheieve many things, with this being one of them. By this time next year I plan to be working as a web developer remotely!</p> 
             </div>
 
             <div class="go-further">
               <!-- Use this area to write the code from the "Go Further" section. -->
+              <section>Go Further</section>
             </div>
           </div>
         </div>
